[gd_scene load_steps=14 format=3 uid="uid://bwcs47owte5ef"]

[ext_resource type="Script" uid="uid://b5cfjitbvkuul" path="res://scenes/ui/main_menu/main_menu.gd" id="1_1ch07"]
[ext_resource type="Shader" uid="uid://bbab2riuh3e74" path="res://resources/shaders/scroll_shader.gdshader" id="2_cmwxi"]
[ext_resource type="Texture2D" uid="uid://dblhnqfqhnqqr" path="res://assets/main_menu/outer-space.png" id="2_qt1dd"]
[ext_resource type="Texture2D" uid="uid://bx07dce2br606" path="res://assets/main_menu/coffee-mug.png" id="3_cmwxi"]
[ext_resource type="Shader" uid="uid://rf5f8vn2xurf" path="res://resources/shaders/alpha_pulse_shader.gdshader" id="5_r70wa"]

[sub_resource type="Animation" id="Animation_52x6y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OuterSpace2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r70wa"]
resource_name = "fade_in"
length = 1.25
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OuterSpace2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ouhi"]
_data = {
&"RESET": SubResource("Animation_52x6y"),
&"fade_in": SubResource("Animation_r70wa")
}

[sub_resource type="Animation" id="Animation_cmwxi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpaceMug:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(220, 50)]
}

[sub_resource type="Animation" id="Animation_qt1dd"]
resource_name = "mug_float"
length = 2.0
loop_mode = 2
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpaceMug:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(220, 50), Vector2(220, 64), Vector2(220, 50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r70wa"]
_data = {
&"RESET": SubResource("Animation_cmwxi"),
&"mug_float": SubResource("Animation_qt1dd")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r70wa"]
shader = ExtResource("2_cmwxi")
shader_parameter/x_speed = 0.05
shader_parameter/y_speed = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_52x6y"]
resource_local_to_scene = true
shader = ExtResource("5_r70wa")
shader_parameter/speed = 3.728
shader_parameter/intensity = 0.5
shader_parameter/base_alpha = 1.0

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_1ch07")

[node name="FadeInAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8ouhi")
}
autoplay = "fade_in"

[node name="MugAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r70wa")
}
autoplay = "mug_float"

[node name="OuterSpace" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_r70wa")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qt1dd")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -130.0
offset_right = 125.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Alien Cafe"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SpaceMug" type="TextureRect" parent="."]
offset_left = 220.0
offset_top = 50.0
offset_right = 420.0
offset_bottom = 250.0
texture = ExtResource("3_cmwxi")

[node name="PressKeyLabel" type="Label" parent="."]
material = SubResource("ShaderMaterial_52x6y")
custom_minimum_size = Vector2(250, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 95.0
offset_right = 125.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
text = "PRESS_ANY"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -119.0
offset_right = 95.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_bottom = 20

[node name="MenuContainer" type="PanelContainer" parent="MarginContainer"]
visible = false
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MenuContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayButton" type="Button" parent="MarginContainer/MenuContainer/MarginContainer/VBoxContainer" groups=["ui_buttons"]]
unique_name_in_owner = true
layout_mode = 2
text = "PLAY"

[node name="StoreButton" type="Button" parent="MarginContainer/MenuContainer/MarginContainer/VBoxContainer" groups=["ui_buttons"]]
unique_name_in_owner = true
layout_mode = 2
text = "STORE_MENU"

[node name="OptionsButton" type="Button" parent="MarginContainer/MenuContainer/MarginContainer/VBoxContainer" groups=["ui_buttons"]]
unique_name_in_owner = true
layout_mode = 2
text = "OPTIONS_MENU"

[node name="QuitGameButton" type="Button" parent="MarginContainer/MenuContainer/MarginContainer/VBoxContainer" groups=["ui_buttons"]]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT_GAME"

[node name="OuterSpace2" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_r70wa")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qt1dd")
